--- a/dev/index.html
+++ b/dev/index.html
@@ -13,8 +13,8 @@ Pkg.add(&quot;StructuralIdentifiability&quot;)</code></pre><h2 id="Citation"><a 
 }</code></pre><h2 id="Feature-Summary"><a class="docs-heading-anchor" href="#Feature-Summary">Feature Summary</a><a id="Feature-Summary-1"></a><a class="docs-heading-anchor-permalink" href="#Feature-Summary" title="Permalink"></a></h2><p><code>StructuralIdentifiability.jl</code> can assess local and global identifiability of ODE models. In addition to these straightforward identifiability queries on individual parameters, the package can distinguish between single- and multi-experiment identifiability.</p><h2 id="Feature-List"><a class="docs-heading-anchor" href="#Feature-List">Feature List</a><a id="Feature-List-1"></a><a class="docs-heading-anchor-permalink" href="#Feature-List" title="Permalink"></a></h2><ul><li>Local identifiability checks</li><li>Global identifiability checks</li><li>Assessment of identifiable functions of parameters</li></ul><h2 id="Contributing"><a class="docs-heading-anchor" href="#Contributing">Contributing</a><a id="Contributing-1"></a><a class="docs-heading-anchor-permalink" href="#Contributing" title="Permalink"></a></h2><ul><li>Please refer to the <a href="https://github.com/SciML/ColPrac/blob/master/README.md">SciML ColPrac: Contributor&#39;s Guide on Collaborative Practices for Community Packages</a> for guidance on PRs, issues, and other matters relating to contributing to StructuralIdentifiability.</li><li>There are a few community forums:<ul><li>The #diffeq-bridged channel in the <a href="https://julialang.org/slack/">Julia Slack</a></li><li><a href="https://gitter.im/JuliaDiffEq/Lobby">JuliaDiffEq</a> on Gitter</li><li>On the Julia Discourse forums</li><li>See also <a href="https://sciml.ai/community/">SciML Community page</a></li></ul></li></ul><h2 id="Reproducibility"><a class="docs-heading-anchor" href="#Reproducibility">Reproducibility</a><a id="Reproducibility-1"></a><a class="docs-heading-anchor-permalink" href="#Reproducibility" title="Permalink"></a></h2><details><summary>The documentation of this SciML package was built using these direct dependencies,</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Status `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl/docs/Project.toml`
   [6e4b80f9] BenchmarkTools v1.3.2
   [e30172f5] Documenter v0.27.24
-  [961ee093] ModelingToolkit v8.42.0
-  [220ca800] StructuralIdentifiability v0.4.5 `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl`</code></pre></details><details><summary>and using this machine and Julia version.</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Julia Version 1.8.5
+  [961ee093] ModelingToolkit v8.47.0
+  [220ca800] StructuralIdentifiability v0.4.6 `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl`</code></pre></details><details><summary>and using this machine and Julia version.</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Julia Version 1.8.5
 Commit 17cfb8e65ea (2023-01-08 06:45 UTC)
 Platform Info:
   OS: Linux (x86_64-linux-gnu)
@@ -27,32 +27,27 @@ Platform Info:
   [c3fe647b] AbstractAlgebra v0.27.8
   [1520ce14] AbstractTrees v0.4.4
   [79e6a3ab] Adapt v3.5.0
-  [dce04be8] ArgCheck v2.3.0
   [ec485272] ArnoldiMethod v0.2.0
-  [4fba245c] ArrayInterface v6.0.24
-  [30b0a656] ArrayInterfaceCore v0.1.28
+  [4fba245c] ArrayInterface v6.0.25
+  [30b0a656] ArrayInterfaceCore v0.1.29
   [015c0d05] ArrayInterfaceOffsetArrays v0.1.7
   [b0d46f97] ArrayInterfaceStaticArrays v0.1.5
   [dd5226c6] ArrayInterfaceStaticArraysCore v0.1.3
-  [15f4f7f2] AutoHashEquals v0.2.0
-  [198e06fe] BangBang v0.3.37
-  [9718e550] Baselet v0.1.1
   [6e4b80f9] BenchmarkTools v1.3.2
   [e2ed5e7c] Bijections v0.1.4
   [62783981] BitTwiddlingConvenienceFunctions v0.1.5
-  [2a0fbf3d] CPUSummary v0.2.1
+  [2a0fbf3d] CPUSummary v0.2.2
   [00ebfdb7] CSTParser v3.3.6
   [49dc2e85] Calculus v0.5.1
   [d360d2e6] ChainRulesCore v1.15.7
-  [9e997f8a] ChangesOfVariables v0.1.4
+  [9e997f8a] ChangesOfVariables v0.1.5
   [fb6a15b2] CloseOpenIntervals v0.1.11
   [861a8166] Combinatorics v1.0.2
   [a80b9123] CommonMark v0.8.10
   [38540f10] CommonSolve v0.2.3
   [bbf7d656] CommonSubexpressions v0.3.0
-  [34da2185] Compat v4.5.0
+  [34da2185] Compat v4.6.0
   [b152e2b5] CompositeTypes v0.1.3
-  [a33af91c] CompositionsBase v0.1.1
   [187b0558] ConstructionBase v1.4.1
   [adafc99b] CpuId v0.3.1
   [a8cc5b0e] Crayons v4.1.1
@@ -60,10 +55,9 @@ Platform Info:
   [864edb3b] DataStructures v0.18.13
   [e2d170a0] DataValueInterfaces v1.0.0
   [ab62b9b5] DeepDiffs v1.2.0
-  [244e2a9f] DefineSingletons v0.1.2
   [b429d917] DensityInterface v0.4.0
-  [2b5f629d] DiffEqBase v6.114.1
-  [459566f4] DiffEqCallbacks v2.24.3
+  [2b5f629d] DiffEqBase v6.115.4
+  [459566f4] DiffEqCallbacks v2.25.0
   [163ba53b] DiffResults v1.1.0
   [b552c78f] DiffRules v1.12.2
   [b4f34e82] Distances v0.10.7
@@ -72,26 +66,25 @@ Platform Info:
   [e30172f5] Documenter v0.27.24
 ⌅ [5b8099bc] DomainSets v0.5.15
   [fa6b7ba4] DualNumbers v0.6.8
-  [7c1d4256] DynamicPolynomials v0.4.5
+  [7c1d4256] DynamicPolynomials v0.4.6
   [4e289a0a] EnumX v1.0.4
   [e2ba6199] ExprTools v0.1.8
   [7034ab61] FastBroadcast v0.2.4
-  [1a297f60] FillArrays v0.13.6
+  [1a297f60] FillArrays v0.13.7
   [6a86dc24] FiniteDiff v2.17.0
   [59287772] Formatting v0.4.2
   [f6369f11] ForwardDiff v0.10.34
   [069b7b12] FunctionWrappers v1.1.3
-  [77dc65aa] FunctionWrappersWrappers v0.1.1
-  [46192b85] GPUArraysCore v0.1.3
+  [77dc65aa] FunctionWrappersWrappers v0.1.3
+  [46192b85] GPUArraysCore v0.1.4
   [c27321d9] Glob v1.3.0
-  [86223c79] Graphs v1.7.4
-  [0b43b601] Groebner v0.2.11
+  [86223c79] Graphs v1.8.0
+⌅ [0b43b601] Groebner v0.2.11
   [d5909c97] GroupsCore v0.4.0
   [34004b35] HypergeometricFunctions v0.3.11
   [b5f81e59] IOCapture v0.2.2
   [615f187c] IfElse v0.1.1
   [d25df0c9] Inflate v0.1.3
-  [22cec73e] InitialValues v0.3.1
   [18e54dd8] IntegerMathUtils v0.1.0
 ⌅ [8197267c] IntervalSets v0.7.3
   [3587e190] InverseFunctions v0.1.8
@@ -100,83 +93,79 @@ Platform Info:
   [82899510] IteratorInterfaceExtensions v1.0.0
   [692b3bcd] JLLWrappers v1.4.1
   [682c06a0] JSON v0.21.3
-  [98e50ef6] JuliaFormatter v1.0.19
+  [98e50ef6] JuliaFormatter v1.0.21
   [ccbc3e58] JumpProcesses v9.3.1
   [b964fa9f] LaTeXStrings v1.3.0
-  [2ee39098] LabelledArrays v1.12.5
+  [2ee39098] LabelledArrays v1.13.0
   [984bce1d] LambertW v0.4.6
   [23fbe1c1] Latexify v0.15.18
-  [10f19ff3] LayoutPointers v0.1.12
+  [10f19ff3] LayoutPointers v0.1.13
+  [50d2b5c4] Lazy v0.15.1
   [d3d80556] LineSearches v7.2.0
-  [2ab3a3ac] LogExpFunctions v0.3.19
+  [2ab3a3ac] LogExpFunctions v0.3.21
   [1914dd2f] MacroTools v0.5.10
   [d125e4d3] ManualMemory v0.1.8
-  [e9d8d322] Metatheory v1.3.5
-  [128add7d] MicroCollections v0.1.3
   [e1d29d7a] Missings v1.1.0
-  [961ee093] ModelingToolkit v8.42.0
+  [961ee093] ModelingToolkit v8.47.0
   [46d2c3a1] MuladdMacro v0.2.4
-  [102ac46a] MultivariatePolynomials v0.4.6
-  [d8a4904e] MutableArithmetics v1.1.0
+  [102ac46a] MultivariatePolynomials v0.4.7
+  [d8a4904e] MutableArithmetics v1.2.1
   [d41bc354] NLSolversBase v7.8.3
   [2774e3e8] NLsolve v4.5.1
   [77ba4419] NaNMath v1.0.1
   [2edaba10] Nemo v0.32.7
-  [6fe1bfb0] OffsetArrays v1.12.8
+  [6fe1bfb0] OffsetArrays v1.12.9
   [bac558e1] OrderedCollections v1.4.1
   [90014a1f] PDMats v0.11.16
   [d96e819e] Parameters v0.12.3
-  [69de0a69] Parsers v2.5.3
+  [69de0a69] Parsers v2.5.7
   [e409e4f3] PoissonRandom v0.4.3
-  [f517fe37] Polyester v0.7.1
-  [1d0040c9] PolyesterWeave v0.2.0
-  [d236fae5] PreallocationTools v0.4.8
+  [f517fe37] Polyester v0.7.2
+  [1d0040c9] PolyesterWeave v0.2.1
+  [d236fae5] PreallocationTools v0.4.11
   [21216c6a] Preferences v1.3.0
   [27ebfcd6] Primes v0.5.3
-  [1fd47b50] QuadGK v2.7.0
+  [1fd47b50] QuadGK v2.8.1
   [fb686558] RandomExtensions v0.4.3
   [e6cf234a] RandomNumbers v1.5.3
   [3cdcf5f2] RecipesBase v1.3.3
-  [731186ca] RecursiveArrayTools v2.35.0
+  [731186ca] RecursiveArrayTools v2.37.0
   [189a3867] Reexport v1.2.2
-  [42d2dcc6] Referenceables v0.1.2
   [ae029012] Requires v1.3.0
-  [79098fc4] Rmath v0.7.0
+  [79098fc4] Rmath v0.7.1
   [7e49a35a] RuntimeGeneratedFunctions v0.5.5
   [94e857df] SIMDTypes v0.1.0
-  [0bca4576] SciMLBase v1.81.0
+  [0bca4576] SciMLBase v1.84.1
+  [c0aeaf25] SciMLOperators v0.1.21
   [efcf1570] Setfield v1.1.1
-  [727e6d20] SimpleNonlinearSolve v0.1.8
+  [727e6d20] SimpleNonlinearSolve v0.1.10
   [699a6c99] SimpleTraits v0.9.4
   [66db9d55] SnoopPrecompile v1.0.3
   [a2af1166] SortingAlgorithms v1.1.0
   [276daf66] SpecialFunctions v2.1.7
-  [171d559e] SplittablesBase v0.1.15
   [aedffcd0] Static v0.8.3
-  [90137ffa] StaticArrays v1.5.12
+  [90137ffa] StaticArrays v1.5.15
   [1e83bf80] StaticArraysCore v1.4.0
   [82ae8749] StatsAPI v1.5.0
   [2913bbd2] StatsBase v0.33.21
   [4c63d2b9] StatsFuns v1.1.1
-  [7792a7ef] StrideArraysCore v0.4.5
-  [220ca800] StructuralIdentifiability v0.4.5 `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl`
+  [7792a7ef] StrideArraysCore v0.4.7
+  [220ca800] StructuralIdentifiability v0.4.6 `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl`
   [2efcf032] SymbolicIndexingInterface v0.2.1
-⌅ [d1185830] SymbolicUtils v0.19.11
-⌅ [0c5d862f] Symbolics v4.14.0
+  [d1185830] SymbolicUtils v1.0.3
+  [0c5d862f] Symbolics v5.0.2
   [3783bdb8] TableTraits v1.0.1
   [bd369af6] Tables v1.10.0
-⌅ [8ea1fca8] TermInterface v0.2.3
   [98d24dd4] TestSetExtensions v2.0.0
-  [8290d209] ThreadingUtilities v0.5.0
-  [ac1d9e8a] ThreadsX v0.1.11
+  [8290d209] ThreadingUtilities v0.5.1
   [a759f4b9] TimerOutputs v0.5.22
   [0796e94c] Tokenize v0.5.25
-  [28d57a85] Transducers v0.4.75
   [a2a6695c] TreeViews v0.3.0
   [410a4b4d] Tricks v0.1.6
-  [5c2747f8] URIs v1.4.1
+  [5c2747f8] URIs v1.4.2
   [3a884ed6] UnPack v1.0.2
-  [1986cc42] Unitful v1.12.2
+  [1986cc42] Unitful v1.12.3
+  [a7c27f48] Unityper v0.1.2
   [700de1a5] ZygoteRules v0.2.2
   [e21ec000] Antic_jll v0.201.500+0
   [d9960996] Arb_jll v200.2300.0+0
@@ -184,7 +173,7 @@ Platform Info:
   [e134572f] FLINT_jll v200.900.4+0
 ⌅ [656ef2d0] OpenBLAS32_jll v0.3.17+0
   [efe28fd5] OpenSpecFun_jll v0.5.5+0
-  [f50d1b31] Rmath_jll v0.3.0+0
+  [f50d1b31] Rmath_jll v0.4.0+0
   [0dad84c5] ArgTools v1.1.1
   [56f22d72] Artifacts
   [2a0f44e3] Base64
@@ -233,5 +222,5 @@ Platform Info:
   [8e850ede] nghttp2_jll v1.48.0+0
   [3f19e933] p7zip_jll v17.4.0+0
 Info Packages marked with ⌅ have new versions available but compatibility constraints restrict them from upgrading. To see why use `status --outdated -m`</code></pre></details>You can also download the 
-<a href="https://github.com/SciML/StructuralIdentifiability.jl/tree/gh-pages/v0.4.5/assets/Manifest.toml">manifest</a> file and the
-<a href="https://github.com/SciML/StructuralIdentifiability.jl/tree/gh-pages/v0.4.5/assets/Project.toml">project</a> file.</article><nav class="docs-footer"><a class="docs-footer-nextpage" href="tutorials/local_identifiability/">Local Identifiability of Differential Models »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.24 on <span class="colophon-date" title="Monday 23 January 2023 22:35">Monday 23 January 2023</span>. Using Julia version 1.8.5.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+<a href="https://github.com/SciML/StructuralIdentifiability.jl/tree/gh-pages/v0.4.6/assets/Manifest.toml">manifest</a> file and the
+<a href="https://github.com/SciML/StructuralIdentifiability.jl/tree/gh-pages/v0.4.6/assets/Project.toml">project</a> file.</article><nav class="docs-footer"><a class="docs-footer-nextpage" href="tutorials/local_identifiability/">Local Identifiability of Differential Models »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.24 on <span class="colophon-date" title="Wednesday 15 February 2023 22:54">Wednesday 15 February 2023</span>. Using Julia version 1.8.5.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
