--- a/dev/index.html
+++ b/dev/index.html
@@ -18,13 +18,13 @@ Pkg.add(&quot;StructuralIdentifiability&quot;)</code></pre><h2 id="Citation"><a 
 Commit 17cfb8e65ea (2023-01-08 06:45 UTC)
 Platform Info:
   OS: Linux (x86_64-linux-gnu)
-  CPU: 2 × Intel(R) Xeon(R) Platinum 8171M CPU @ 2.60GHz
+  CPU: 2 × Intel(R) Xeon(R) Platinum 8272CL CPU @ 2.60GHz
   WORD_SIZE: 64
   LIBM: libopenlibm
   LLVM: libLLVM-13.0.1 (ORCJIT, skylake-avx512)
   Threads: 1 on 2 virtual cores</code></pre></details><details><summary>A more complete overview of all dependencies and their versions is also provided.</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Status `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl/docs/Manifest.toml`
   [a4c015fc] ANSIColoredPrinters v0.0.1
-  [c3fe647b] AbstractAlgebra v0.27.10
+⌅ [c3fe647b] AbstractAlgebra v0.27.10
   [1520ce14] AbstractTrees v0.4.4
   [79e6a3ab] Adapt v3.5.0
   [ec485272] ArnoldiMethod v0.2.0
@@ -45,7 +45,7 @@ Platform Info:
   [bbf7d656] CommonSubexpressions v0.3.0
   [34da2185] Compat v4.6.0
   [b152e2b5] CompositeTypes v0.1.3
-  [187b0558] ConstructionBase v1.4.1
+  [187b0558] ConstructionBase v1.5.1
   [adafc99b] CpuId v0.3.1
   [a8cc5b0e] Crayons v4.1.1
   [9a962f9c] DataAPI v1.14.0
@@ -53,12 +53,12 @@ Platform Info:
   [e2d170a0] DataValueInterfaces v1.0.0
   [ab62b9b5] DeepDiffs v1.2.0
   [b429d917] DensityInterface v0.4.0
-  [2b5f629d] DiffEqBase v6.120.0
+  [2b5f629d] DiffEqBase v6.121.1
   [459566f4] DiffEqCallbacks v2.26.0
   [163ba53b] DiffResults v1.1.0
-  [b552c78f] DiffRules v1.12.2
+  [b552c78f] DiffRules v1.13.0
   [b4f34e82] Distances v0.10.7
-  [31c24e10] Distributions v0.25.81
+  [31c24e10] Distributions v0.25.84
   [ffbed154] DocStringExtensions v0.9.3
   [e30172f5] Documenter v0.27.24
 ⌅ [5b8099bc] DomainSets v0.5.15
@@ -70,7 +70,7 @@ Platform Info:
   [1a297f60] FillArrays v0.13.7
   [6a86dc24] FiniteDiff v2.18.0
   [59287772] Formatting v0.4.2
-  [f6369f11] ForwardDiff v0.10.34
+  [f6369f11] ForwardDiff v0.10.35
   [069b7b12] FunctionWrappers v1.1.3
   [77dc65aa] FunctionWrappersWrappers v0.1.3
   [46192b85] GPUArraysCore v0.1.4
@@ -85,13 +85,13 @@ Platform Info:
   [18e54dd8] IntegerMathUtils v0.1.0
 ⌅ [8197267c] IntervalSets v0.7.3
   [3587e190] InverseFunctions v0.1.8
-⌅ [92d709cd] IrrationalConstants v0.1.1
+  [92d709cd] IrrationalConstants v0.2.1
   [c8e1da08] IterTools v1.4.0
   [82899510] IteratorInterfaceExtensions v1.0.0
   [692b3bcd] JLLWrappers v1.4.1
   [682c06a0] JSON v0.21.3
   [98e50ef6] JuliaFormatter v1.0.24
-  [ccbc3e58] JumpProcesses v9.5.0
+  [ccbc3e58] JumpProcesses v9.5.1
   [b964fa9f] LaTeXStrings v1.3.0
   [2ee39098] LabelledArrays v1.14.0
   [984bce1d] LambertW v0.4.6
@@ -110,7 +110,7 @@ Platform Info:
   [d41bc354] NLSolversBase v7.8.3
   [2774e3e8] NLsolve v4.5.1
   [77ba4419] NaNMath v1.0.2
-  [2edaba10] Nemo v0.32.7
+⌅ [2edaba10] Nemo v0.32.7
   [bac558e1] OrderedCollections v1.4.1
   [90014a1f] PDMats v0.11.16
   [d96e819e] Parameters v0.12.3
@@ -131,21 +131,21 @@ Platform Info:
   [79098fc4] Rmath v0.7.1
   [7e49a35a] RuntimeGeneratedFunctions v0.5.5
   [94e857df] SIMDTypes v0.1.0
-  [0bca4576] SciMLBase v1.86.2
+  [0bca4576] SciMLBase v1.87.0
   [c0aeaf25] SciMLOperators v0.1.22
   [efcf1570] Setfield v1.1.1
   [727e6d20] SimpleNonlinearSolve v0.1.13
   [699a6c99] SimpleTraits v0.9.4
   [66db9d55] SnoopPrecompile v1.0.3
   [a2af1166] SortingAlgorithms v1.1.0
-  [276daf66] SpecialFunctions v2.1.7
+  [276daf66] SpecialFunctions v2.2.0
   [aedffcd0] Static v0.8.4
   [0d7ed370] StaticArrayInterface v1.2.1
   [90137ffa] StaticArrays v1.5.16
   [1e83bf80] StaticArraysCore v1.4.0
   [82ae8749] StatsAPI v1.5.0
   [2913bbd2] StatsBase v0.33.21
-  [4c63d2b9] StatsFuns v1.1.1
+  [4c63d2b9] StatsFuns v1.2.1
   [7792a7ef] StrideArraysCore v0.4.8
   [220ca800] StructuralIdentifiability v0.4.7 `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl`
   [2efcf032] SymbolicIndexingInterface v0.2.1
@@ -159,6 +159,7 @@ Platform Info:
   [0796e94c] Tokenize v0.5.25
   [a2a6695c] TreeViews v0.3.0
   [410a4b4d] Tricks v0.1.6
+  [781d530d] TruncatedStacktraces v1.0.0
   [5c2747f8] URIs v1.4.2
   [3a884ed6] UnPack v1.0.2
   [1986cc42] Unitful v1.12.3
@@ -220,4 +221,4 @@ Platform Info:
   [3f19e933] p7zip_jll v17.4.0+0
 Info Packages marked with ⌅ have new versions available but compatibility constraints restrict them from upgrading. To see why use `status --outdated -m`</code></pre></details>You can also download the 
 <a href="https://github.com/SciML/StructuralIdentifiability.jl/tree/gh-pages/v0.4.7/assets/Manifest.toml">manifest</a> file and the
-<a href="https://github.com/SciML/StructuralIdentifiability.jl/tree/gh-pages/v0.4.7/assets/Project.toml">project</a> file.</article><nav class="docs-footer"><a class="docs-footer-nextpage" href="tutorials/local_identifiability/">Local Identifiability of Differential Models »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.24 on <span class="colophon-date" title="Tuesday 21 February 2023 16:50">Tuesday 21 February 2023</span>. Using Julia version 1.8.5.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+<a href="https://github.com/SciML/StructuralIdentifiability.jl/tree/gh-pages/v0.4.7/assets/Project.toml">project</a> file.</article><nav class="docs-footer"><a class="docs-footer-nextpage" href="tutorials/local_identifiability/">Local Identifiability of Differential Models »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.24 on <span class="colophon-date" title="Saturday 25 February 2023 22:12">Saturday 25 February 2023</span>. Using Julia version 1.8.5.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
